# neural-networks-zero-to-hero

./: README.md  micrograd_from_scratch.ipynb  pyproject.toml
.ipynb_checkpoints/: micrograd_from_scratch-checkpoint.ipynb
makemore/: DnD_names.csv  makemore.ipynb  names.txt  weights_loss-2.6.pt
makemore/data/: Dnd_characters_May2018__names-only.txt
