[tool.poetry]
name = "intro-to-neural-networks"
version = "0.1.0"
description = ""
authors = ["Nico <nightgrey@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "intro_to_neural_networks"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"
graphviz = "^0.20.1"
autopep8 = "^2.0.2"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
